<resources>
    <string name="app_name">Homework App</string>
    <string name="settings_title">Настройки подключения</string>
    <string name="settings_hint">Введите адрес вашего сервера (обязательно https://)</string>
    <string name="settings_url_label">Адрес сервера</string>
    <string name="settings_save">Сохранить и подключиться</string>
    <string name="settings_error_empty">Введите адрес сервера</string>
    <string name="settings_error_https">Адрес должен начинаться с https://</string>
    <string name="menu_settings">Настройки подключения</string>
    <string name="menu_reload">Обновить</string>
    <string name="error_title">Не удалось подключиться к серверу</string>
    <string name="error_retry">Повторить</string>
    <string name="error_open_settings">Изменить адрес сервера</string>
</resources>
